--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 @import "/node_modules/bootstrap/dist/css/bootstrap.min.css";
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,400;0,900;1,200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;0,700;1,400;1,600;1,700&display=swap");
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -9941,7 +9942,7 @@ body {
   width: 100%;
   color: #555 !important;
   font-family: "Source Sans Pro", sans-serif !important;
-  font-size: 16px;
+  font-size: 16.2px !important;
   min-height: 100%;
   transition: all 0.7s ease-out;
 }
@@ -9950,12 +9951,21 @@ a {
   color: #ffffff !important;
 }
 
+h1 {
+  font-size: 48px;
+  line-height: 65px;
+  font-weight: 600;
+  text-transform: none;
+  letter-spacing: normal;
+  color: #ffffff !important;
+}
+
 .header {
   min-height: 100px;
   align-items: center;
   vertical-align: center;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .info {
@@ -9966,33 +9976,74 @@ a {
   max-width: 1200px !important;
 }
 
+.btn-primary {
+  width: 160px;
+  height: 50px;
+  background-color: #008ed6 !important;
+  box-shadow: 0px 0px 3px 0px rgba(3, 3, 3, 0.1);
+  font-size: 14px !important;
+  font-weight: 700 !important;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding: 0 auto;
+}
+
+.btn-outline-secondary {
+  width: 160px;
+  height: 50px;
+  font-size: 14px !important;
+  font-weight: 700 !important;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding: 0 auto;
+}
+
+.nav-link {
+  padding-right: 0px !important;
+  padding-left: 0px !important;
+  font-size: 16.2px !important;
+}
+
+.nav-item {
+  margin-right: 21.5px;
+}
+
+.nav-item:last-child {
+  margin-right: 0 !important;
+}
+
+.active {
+  border-image-source: url("/img/nav_link_active_border.png") 2 round;
+  border-bottom: dashed #008ed6;
+  border-bottom-width: thick;
+}
+
+.head-navbar {
+  padding: 0px !important;
+  min-height: 100px;
+}
+
+.nav-menu {
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+}
+
 .block {
   background-color: transparent;
   border: 2px solid #ffffff;
   height: 100% !important;
-  padding: 20px;
-  text-align: center;
 }
 
 .headi {
   background-image: url("/img/headerbg.png");
   overflow: hidden;
-  background-size: 100%;
+  background-size: cover;
+  background-position: center center;
 }
 
 .logo {
   display: flex;
   text-align: center;
-}
-
-.logo-title {
-  font-family: Quicksand;
-  font-size: 24px;
-  line-height: 58px;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #ffffff !important;
-  padding: 0 15px;
 }
 
 .logo-info {
@@ -10004,8 +10055,38 @@ a {
   text-transform: uppercase;
   letter-spacing: 0.14em;
   color: #ffffff;
-  text-align: center;
+  text-align: start;
   margin: auto 0;
+}
+
+.navbar-nav {
+  display: block;
+}
+
+.head-navbar {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+.nav-lgo {
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 20px 0;
+  padding-left: 0 !important;
+}
+
+.menu {
+  margin: 0 auto !important;
+}
+
+.navbar-brand {
+  font-family: "Quicksand", sans-serif;
+  font-size: 25px !important;
+  line-height: 58px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ffffff !important;
+  margin-right: 5px !important;
 }
 
 .centered {
@@ -10037,4 +10118,100 @@ hr {
   border: 0;
   border-top: 1px solid #ccc;
   margin: 1px;
+}
+
+.info-cont {
+  text-align: start;
+  margin-top: 40px !important;
+}
+
+.info-cont__heading {
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  color: #008ed6;
+  margin-bottom: 20px;
+}
+
+.info-cont__title {
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: 600;
+  text-transform: none;
+  letter-spacing: normal;
+  color: #ffffff;
+  margin-bottom: 24px;
+}
+
+.info-cont__about {
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: none;
+  letter-spacing: 0.02em;
+  color: #999999;
+  padding-right: 5rem;
+  margin-bottom: 56px;
+}
+
+.info-cont__buttons {
+  display: flex;
+}
+
+.info-cont__buttons__primary {
+  margin-right: 10px;
+}
+
+.info-cont__buttons__outline__secondary {
+  margin-left: 10px;
+}
+
+.info-image {
+  padding: 0 !important;
+}
+
+.info-image__block {
+  text-align: end;
+}
+
+.info-image__item {
+  text-align: end;
+  margin-left: auto;
+}
+
+@media (max-width: 1200px) {
+  .navbar-brand {
+    font-size: calc(20px + 4 * ((100vw - 320px) / 1600));
+    font-size: calc(16px + 8 * (100vw - 320px) / 1600) !important;
+  }
+
+  .nav-lgo {
+    flex-wrap: wrap !important;
+    text-align: center;
+  }
+}
+@media (max-width: 991px) {
+  .navba {
+    transition: 2, 7s ease !important;
+    display: block !important;
+    margin: 10px 0;
+  }
+
+  .navbar-collapse {
+    border: 2px solid #ffffff;
+  }
+
+  .nav-item.active {
+    border-bottom: none !important;
+    background-color: #008ed6;
+  }
+
+  .nav-item {
+    margin-right: 0px;
+  }
+}
+@media (max-width: 991px) {
+  .info-row {
+    flex-wrap: wrap !important;
+  }
 }
