the  end of 19.10.21

--- a/css/style.css
+++ b/css/style.css
@@ -9935,7 +9935,7 @@ h3 {
   box-sizing: border-box !important;
 }
 
-body {
+html, body {
   -webkit-font-smoothing: antialised !important;
   margin: 0;
   padding: 0;
@@ -9949,6 +9949,28 @@ body {
 
 a {
   color: #ffffff !important;
+}
+
+h2 {
+  font-size: 36px !important;
+  font-weight: 600 !important;
+  text-transform: none;
+  letter-spacing: 0.005em;
+  color: #1a1a1a !important;
+  margin: 0 !important;
+}
+
+.overview-heading {
+  color: #ffffff !important;
+}
+
+h5 {
+  font-size: 14px !important;
+  font-weight: 700 !important;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  color: #008ed6 !important;
+  margin: 0 !important;
 }
 
 h1 {
@@ -9968,7 +9990,7 @@ h1 {
   margin-bottom: 20px;
 }
 
-.info {
+.inform {
   min-height: 480px;
 }
 
@@ -10001,7 +10023,8 @@ h1 {
 .nav-link {
   padding-right: 0px !important;
   padding-left: 0px !important;
-  font-size: 16.2px !important;
+  font-size: 16px !important;
+  font-weight: 800;
 }
 
 .nav-item {
@@ -10035,7 +10058,7 @@ h1 {
 }
 
 .headi {
-  background-image: url("/img/headerbg.png");
+  background-image: url("/img/header/header_bg.png");
   overflow: hidden;
   background-size: cover;
   background-position: center center;
@@ -10081,9 +10104,8 @@ h1 {
 
 .navbar-brand {
   font-family: "Quicksand", sans-serif;
-  font-size: 25px !important;
-  line-height: 58px;
-  font-weight: 700;
+  font-size: 25.5px !important;
+  font-weight: 900;
   text-transform: uppercase;
   color: #ffffff !important;
   margin-right: 5px !important;
@@ -10095,21 +10117,6 @@ h1 {
 
 p {
   font-size: 14px;
-}
-
-a {
-  color: #f85c37;
-  outline: 0;
-  text-decoration: none;
-}
-
-.navbar {
-  font-weight: 800;
-}
-
-.navbar-inverse {
-  background-color: #2d2d2d;
-  border: 2px solid aqua;
 }
 
 hr {
@@ -10126,12 +10133,8 @@ hr {
 }
 
 .info-cont__heading {
-  font-size: 14px;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  color: #008ed6;
-  margin-bottom: 20px;
+  margin-top: -1px !important;
+  margin-bottom: 20px !important;
 }
 
 .info-cont__title {
@@ -10151,37 +10154,36 @@ hr {
   letter-spacing: 0.02em;
   color: #999999;
   padding-right: 5rem;
-  margin-bottom: 57px;
-}
-
-.info-cont__buttons {
-  display: flex;
+  margin-bottom: 61px;
 }
 
 .info-cont__buttons__primary {
-  margin-right: 10px;
+  margin-right: 9px;
 }
 
 .info-cont__buttons__outline__secondary {
-  margin-left: 10px;
+  margin-left: 9px;
   color: #ffffff !important;
 }
 
 .info-image {
   padding: 0 !important;
+  max-height: 100%;
+  text-align: end;
+  margin-left: auto;
+  margin-top: auto;
 }
 
 .info-image__block {
-  text-align: end;
+  max-height: 100%;
   text-align: end;
   margin-left: auto;
-  vertical-align: bottom;
+  margin-top: auto;
 }
 
 .info-image__item {
   text-align: end;
   margin-left: auto;
-  margin-top: auto !important;
   vertical-align: sub;
 }
 
@@ -10220,12 +10222,87 @@ hr {
     margin-right: 0px;
   }
 }
+.blocks {
+  background-color: transparent;
+  border: 2px solid #008ed6;
+  height: 100% !important;
+  min-height: 100px;
+  padding: 0;
+}
+
+.overview-cont {
+  margin-top: 61.5px;
+}
+
+.overview-info {
+  text-align: center;
+  margin-bottom: 70px !important;
+}
+
+.h5-overview {
+  margin-bottom: 10px !important;
+}
+
+.h2-overview {
+  margin-bottom: 12px !important;
+}
+
+.border-dashed {
+  margin-bottom: -20px;
+}
+
+.overview-wrapper, .detail-wrapper, .pricing-wrapper {
+  background-color: #ffffff;
+}
+
+.overview-wrapper, .detail-wrapper, .customise-wrapper, .feedbacks-wrapper, .pricing-wrapper, .contact-wrapper {
+  margin-bottom: 5rem;
+}
+
+.customise-wrapper, .contact-wrapper {
+  background-color: #f2f2f2;
+}
+
+.map-wrapper {
+  height: 460px;
+}
+
+.footer-wrapper, .rehearsal-wrapper {
+  background-color: #15141a;
+  min-height: 160px;
+}
+
+.footer-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+footer {
+  margin-top: auto;
+  display: block;
+}
+
+.fa-twitter__cust {
+  color: #008ed6;
+}
+
+.footer-copyrights__item {
+  text-transform: uppercase;
+  color: #444348;
+  margin: 0;
+  font-weight: 700;
+}
+
 @media (max-width: 991px) {
   .info-row {
     flex-wrap: wrap !important;
   }
 }
 @media (max-width: 768px) {
+  .info {
+    margin-bottom: 30px;
+  }
+
   .info-image__block {
     text-align: center;
   }
@@ -10234,4 +10311,67 @@ hr {
     text-align: center;
     margin: 0 auto;
   }
+
+  .info-cont__heading {
+    text-align: center;
+  }
+
+  .info-cont__title {
+    text-align: center;
+  }
+
+  .info-cont__about {
+    padding: 0;
+    text-align: center;
+  }
+}
+@media (max-width: 374px) {
+  .info-cont__buttons {
+    flex-wrap: wrap;
+  }
+
+  .info-cont__buttons__primary {
+    margin-right: 0px;
+    margin-bottom: 10px;
+  }
+
+  .info-cont__buttons__outline__secondary {
+    margin-top: 10px;
+    margin-left: 0px;
+  }
+}
+/* css only solution */
+/*[class*="col-"]:not(:last-child){
+    margin-bottom: 15px;
+}*/
+#f {
+  background: #2d2d2d;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.footer-icons-row {
+  margin-bottom: 15px;
+}
+
+i {
+  color: #bdbdbd;
+  font-size: 19px;
+  padding: 0 15px;
+  padding-top: 12px;
+  padding-bottom: 29px;
+  height: 18px;
+}
+
+.fa-first {
+  padding-left: 0 !important;
+  padding-right: 11px !important;
+}
+
+.fa-last {
+  padding-right: 0 !important;
+}
+
+i:hover {
+  color: #ff7878;
 }
